force-app/main/default/objects/Client_Objective_TimeSeries__c/Client_Objective_TimeSeries__c.object-meta.xml
<CustomObject>
    <label>Client Objective TimeSeries</label>
    <nameField>
        <displayFormat>COTS-{YYYY}-{MM}-{0000000}</displayFormat>
        <label>COTS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Objective TimeSeries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>