force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Client_Objectives_TS</relationshipName>
    <type>Lookup</type>
</CustomField>