force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Client_Objective_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Objective_Notes__c</fullName>
    <label>Client_Objective_Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>