force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/CO_Name__c.field-meta.xml
<CustomField>
    <fullName>CO_Name__c</fullName>
    <label>CO Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>