force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Date_Absorbed__c.field-meta.xml
<CustomField>
    <fullName>Date_Absorbed__c</fullName>
    <label>Date Absorbed</label>
    <type>Date</type>
</CustomField>