force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired__c</fullName>
    <inlineHelpText>Date an objective is first acquired</inlineHelpText>
    <label>Date Acquired</label>
    <type>Date</type>
</CustomField>