force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Date_Held__c.field-meta.xml
<CustomField>
    <fullName>Date_Held__c</fullName>
    <label>Date Held</label>
    <type>Date</type>
</CustomField>