force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Date_Introduced__c.field-meta.xml
<CustomField>
    <fullName>Date_Introduced__c</fullName>
    <inlineHelpText>Date when status changed to OBJ</inlineHelpText>
    <label>Date Introduced</label>
    <type>Date</type>
</CustomField>