force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Objective__r.SD__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>