force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Re_Test_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Re_Test_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re. Test Recommended</label>
    <type>Checkbox</type>
</CustomField>