force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <label>RunId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>