force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>