force-app/main/default/objects/Client_Objective_TimeSeries__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OBJ</fullName>
            </value>
            <value>
                <fullName>ACQ</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>HLD</fullName>
            </value>
            <value>
                <fullName>1CP</fullName>
            </value>
            <value>
                <fullName>1IP</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>