force-app/main/default/objects/Client_Objective_TimeSeries__c/listViews/All_TimeSeries.listView-meta.xml
<ListView>
    <fullName>All_TimeSeries</fullName>
    <columns>RunId__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Objective__c</columns>
    <columns>TS_Load_DateTime__c</columns>
    <columns>CO_Name__c</columns>
    <columns>Objective_Name__c</columns>
    <columns>Program_Name__c</columns>
    <columns>ProgramObjective__c</columns>
    <columns>SD_Name__c</columns>
    <columns>Re_Test_Recommended__c</columns>
    <filterScope>Everything</filterScope>
    <label>All TimeSeries</label>
</ListView>